<resources>
    <string name="app_name">Grading Application</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="marks">Marks</string>
    <string name="credits">Credits</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="submit">Submit</string>
    <string name="id">Id</string>
    <string name="programCode">Program Code</string>

    <string name="select">Select</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="search">Search By:</string>

    <string-array name="courseList">
        <item>PROG 8480</item>
        <item>PROG 8470</item>
        <item>PROG 8460</item>
        <item>PROG 8450</item>
    </string-array>

</resources>