<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/id"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/firstName"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lastName"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/course"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/marks"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/credits"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerView" />
    </LinearLayout>
</FrameLayout>